# instruqt-converter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  ENVEXAMPLE  LICENSE  README.md  convert.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  devel.yml  prod.yml
converters/: __init__.py  dev.py  prod.py
converters/utils/: __init__.py  api.py
core/: __init__.py
instruqt-converter/: convert.py
instruqt-converter/converters/: dev.py
instruqt-converter/converters/utils/: handler.py
instruqt-converter/core/: config.py
instruqt_converter/: __init__.py  convert.py
instruqt_converter/converters/: dev.py  prod.py
instruqt_converter/converters/utils/: api.py  handler.py
instruqt_converter/core/: config.py
